qbs (1.4.1+dfsg-6) UNRELEASED; urgency=medium


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 18 Jul 2015 18:00:48 +0300

qbs (1.4.1+dfsg-5) experimental; urgency=medium

  * Fixup the previous kFreeBSD fix; add B-D on libutil-freebsd-dev.
  * Use a whitelist of architectures where we run tests, until QBS
    gets ported away from QtScript.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 13 Jul 2015 13:20:21 +0300

qbs (1.4.1+dfsg-4) experimental; urgency=medium

  * Add missing includes for kinfo_getproc(3) on kFreeBSD
    (bsd_includes.diff).
  * Disable one more test (infinite-loop-js) failing because of QtScript
    bugs to make the build pass on powerpc. Rename the patch from
    disable_moc_hpp_included.diff to disable_tests_qtscript.diff.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 12 Jul 2015 17:08:33 +0300

qbs (1.4.1+dfsg-3) experimental; urgency=medium

  * Backport upstream change to run testAssembly only on architectures
    where it is supported (fix_assembly_test.diff).
  * Replace revert_tests_speedup.diff with proposed upstream version
    by Christian Kandeler.
  * Disable moc-hpp-included test which currently fails because of a bug
    in QtScript on some architectures (disable_moc_hpp_included.diff).
  * Update some URLs to use *.qt.io instead of *.qt-project.org.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 11 Jul 2015 19:57:05 +0300

qbs (1.4.1+dfsg-2) experimental; urgency=medium

  * Version all symbols from 1.4 snapshots as 1.4.0.
  * Revert upstream commit that may have caused tests to fail.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 08 Jul 2015 14:00:20 +0300

qbs (1.4.1+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Update debian/watch for new tarball naming scheme.
  * Refresh debian/patches/skip_test.diff.
  * Install new tools/commandechomode.h header in qbs-dev.
  * Update debian/libqbscore1.symbols for the new version.
