@@ -11,7 +11,6 @@ export CFLAGS := $(shell dpkg-buildflags --get CFLAGS) $(shell dpkg-buildflags -
 export CXXFLAGS := $(shell dpkg-buildflags --get CXXFLAGS) $(shell dpkg-buildflags --get CPPFLAGS)
 export LDFLAGS := $(shell dpkg-buildflags --get LDFLAGS) -Wl,--as-needed
 export QT_SELECT := qt5
-export XDG_CONFIG_HOME := $(CONFIG_DIR)
 
 # On other archs there are random segfaults in QtScript code.
 # We will enable the tests everywhere when QBS gets ported away from QtScript.
@@ -58,10 +57,11 @@ override_dh_auto_test:
 ifneq (,$(filter $(DEB_HOST_ARCH_CPU),$(tested_archs)))
 	set -ex; \
 		export LD_LIBRARY_PATH=$(CURDIR)/lib/:$$LD_LIBRARY_PATH; \
-		$(CURDIR)/bin/qbs-setup-toolchains --detect --settings-dir $(CONFIG_DIR)/QtProject; \
+		export XDG_CONFIG_HOME=$(CONFIG_DIR); \
+		$(CURDIR)/bin/qbs-setup-toolchains --detect; \
 		$(CURDIR)/bin/qbs-setup-qt /usr/bin/qmake qbs_autotests; \
-		[ -n "`$(CURDIR)/bin/qbs-config --settings-dir $(CONFIG_DIR)/QtProject --list profiles.qbs_autotests.baseProfile`" ] || \
-			$(CURDIR)/bin/qbs-config --settings-dir $(CONFIG_DIR)/QtProject profiles.qbs_autotests.baseProfile gcc; \
+		[ -n "`$(CURDIR)/bin/qbs-config --list profiles.qbs_autotests.baseProfile`" ] || \
+			$(CURDIR)/bin/qbs-config profiles.qbs_autotests.baseProfile gcc; \
 		dh_auto_test
 endif
 
