@@ -1,5 +1,8 @@
 qbs (1.4.1+dfsg-6) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Simplify testing commands: no need to pass --settings-dir because
+    we export XDG_CONFIG_HOME anyway.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 18 Jul 2015 18:00:48 +0300
 
